<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Frodo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- Singup fragment settings -->
    <string name="signup_button_text">Signup</string>
    <string name="com_signup_handle_text">Username</string>
    <string name="com_signup_email_text">Email</string>

    <!-- Facebook configuration -->
    <string name="facebook_app_id">584696474923426</string>
    <string name="facebook_read_permissions">user_events, user_about_me, user_photos, email, user_friends</string>
    <string name="facebook_write_permissions">publish_stream</string>

    <!-- Backend Configuration -->
    <!-- <string name="host_ip">10.71.113.123</string> -->
    <string name="host_ip">192.168.248.1</string>
    <!-- <string name="host_ip">192.168.42.95</string> -->
    <string name="host_port">3000</string>
    <string name="should_signup_query">/user/shouldregister</string>
    <string name="signup_query">/user/register/?username</string>
    <string name="user_data_query">/?username/?password/?facebookid</string>
    <string name="login_query">/users/auth/facebook/callback</string>
    <string name="timeout">10000</string>

    <!-- Menu Screen Settings -->
    <string name="camera_icon_text">Camera</string>
    <string name="events_icon_text">Events</string>
    <string name="checkin_icon_text">Check In</string>
    <string name="photos_icon_text">Photos</string>
    <string name="title_activity_application">Frodo</string>
    <string name="title_section1">Menu</string>
    <string name="title_section2">All Pics</string>
    <string name="title_section3">My Network Pics</string>
    <string name="title_section4">My Pics</string>
    <string name="title_section5">Explore</string>
    <string name="upload_icon_text">Upload</string>
    <string name="title_activity_checkin">Check In</string>
    <string name="checkin_title_section1">Events</string>
    <string name="possible_date_formats">yyyy-MM-dd\'T\'HH:mm:ssZ||||yyyy-MM-dd</string>
    <string name="title_activity_camera_photo">Frodo</string>
    <string name="camera_photo_camera_icon_text">Camera</string>
    <string name="camera_photo_share_icon_text">Share</string>
    <string name="title_activity_photo_detail">Pics</string>
    <string name="title_activity_photo_details">Pics</string>
    <string name="title_activity_event">Event</string>
    <string name="title_activity_event_calendar">Events</string>

</resources>
