<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#5B8FE9"
        android:layout_weight="3">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/exploreImages"
            android:layout_gravity="center"
            android:layout_margin="5px"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_weight="1"
        android:layout_margin="2px">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/manageMyEventsMenuButton"
                android:layout_weight="0.5"
                android:background="#323e6f"
                android:layout_margin="2px"
                android:clickable="true"
                android:text="@string/events_icon_text"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:textAlignment="viewEnd" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/uploadPhotosMenu"
                android:layout_weight="0.5"
                android:background="#5b8ee8"
                android:layout_margin="2px"
                android:clickable="true"
                android:text="@string/upload_icon_text"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="#ffffff"
                android:textAlignment="viewEnd" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/imageView"
                android:layout_gravity="center"
                />
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_weight="0.5">


        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/checkinMenuButton"
            android:layout_weight="0.5"
            android:background="#323e6f"
            android:layout_margin="2px"
            android:clickable="true"
            android:text="@string/checkin_icon_text"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textAlignment="viewEnd"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cameraMenuButton"
            android:layout_weight="0.5"
            android:background="#0e0e23"
            android:layout_margin="2px"
            android:clickable="true"
            android:text="@string/camera_icon_text"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#ffffff"
            android:textAlignment="viewEnd" />
    </LinearLayout>


</LinearLayout>

