<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#303040" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:src="@drawable/ic_launcher" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#AFDEFE"
            android:textSize="28sp"
            android:typeface="serif"
            android:textStyle="italic"
            android:text="@string/app_name" />
    </LinearLayout>


    <TableLayout
        android:id="@+id/registrationTableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:measureWithLargestChild="false"
        android:showDividers="none"
        android:layout_marginTop="@dimen/com_signup_table_top_margin"
        android:layout_gravity="center">
        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/com_signup_body_text"
                android:text="@string/com_signup_handle_text"
                android:layout_marginRight="15dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/handle"
                android:layout_gravity="center"
                android:width="@dimen/com_signup_handlebox_width"
                android:editable="true"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:fontFamily="sans-serif"
                android:padding="4dp"
                android:height="20dp"
                android:textSize="12sp"/>

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:fontFamily="sans-serif"
                android:textSize="@dimen/com_signup_body_text"/>
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/com_signup_body_text"
                android:text="@string/com_signup_email_text"
                android:layout_marginRight="15dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/email"
                android:layout_gravity="center"
                android:width="@dimen/com_signup_emailbox_width"
                android:editable="true"
                android:padding="4dp"
                android:background="#FFFFFF"
                android:textColor="#000000"
                android:textStyle="normal"
                android:fontFamily="sans-serif"
                android:hint="username@domail.com"
                android:height="20dp"
                android:textSize="12sp"/>
        </TableRow>

    </TableLayout>

    <com.applications.frodo.widgets.SignupButton
        android:id="@id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="15dp"
        android:width="100sp"
        android:background="@color/signup_button_bgcolor"
        android:textColor="@color/signup_button_textcolor"
        android:paddingLeft="@dimen/com_signupbutton_padding_left"
        android:paddingRight="@dimen/com_signupbutton_padding_right"
        android:paddingBottom="@dimen/com_signupbutton_padding_bottom"
        android:paddingTop="@dimen/com_signupbutton_padding_top"
        android:textSize="@dimen/com_signupbutton_text_size"
        android:textStyle="bold"
        android:text="@string/signup_button_text"
        />

</LinearLayout>